--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "deploy": "rm -rf dist && vite build && gh-pages -d dist"
   },
-  "homepage": "https://github.com/yishan13-tsai/typescript-react/",
+  "homepage": "https://kaoyuchung.github.io/typescript-react/",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "^2.1.0",
